# BLE_TCP_app

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  credentials_template.py  logger_set.py  main.py  pyproject.toml  requirements.txt
app_backend/: ble_char_template.py  ble_main.py  device.py  gui_backend.py  parser.py  uuid_dict_template.py  wifi_char_template.py  wifi_server.py
app_frontend/: config_window.py  gui_frames.py  gui_main.py  toplevel_waiting.py  update_toplevel.py  window_id.py  window_info.py  window_shared_utils.py
docs/: conf.py  frontend.rst  index.rst
docs/_build/html/: .buildinfo  backend.html  frontend.html  genindex.html  history.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/app_backend/: ble_char.html  ble_main.html  device.html  gui_backend.html  parser.html  wifi_char.html  wifi_server.html
docs/_build/html/_modules/app_frontend/: config_window.html  gui_frames.html  gui_main.html  toplevel_waiting.html  update_toplevel.html  window_id.html  window_info.html  window_shared_utils.html
